<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/camera_boarder"
    android:gravity="center"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semi_transparent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/congratsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="Congrats!"
                android:textColor="@color/color_accent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="You correctly showed: "
                android:textColor="@color/color_accent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="WORD"
                android:textColor="@color/color_accent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/try_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="12dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_yellow"
                    android:text="@string/try_again"
                    android:textColor="@color/yellow"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/generate_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="10dp"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green"
                        android:text="@string/generate_n_new_word"
                        android:textColor="@color/green"
                        android:textAllCaps="false"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="5dp"
                        android:padding="12dp"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green"
                        android:text="@string/change_n_level"
                        android:textColor="@color/green"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>